# inlier

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .typos.toml  AGENTS.md  Cargo.toml  README.md  build.rs  justfile  mise.toml  pyproject.toml
.cargo/: config.toml
.github/: docs.yml
.github/workflows/: ci.yml  codspeed.yml  quality.yml  release.yml
benches/: colored_icp.rs  components.rs  estimators.rs  global_registration.rs  line_ransac.rs  rejection.rs  teaser_comparison.rs
crates/inlier-gallery/: Cargo.toml  Trunk.toml  index-threads.html  index.html  threads-init.mjs
crates/inlier-gallery/src/: absolute_pose_demo.rs  algo_config.rs  essential_matrix_demo.rs  fundamental_matrix_demo.rs  line_fitting_demo.rs  main.rs  merge_demo.rs  normals_demo.rs  plane_demo.rs  rigid_transform_demo.rs  segmentation_demo.rs  voxel_demo.rs  voxel_plane_demo.rs
crates/spatialrust-inlier/: Cargo.toml
crates/spatialrust-inlier/examples/: inspect_building.rs  salon_to_vg.rs
crates/spatialrust-inlier/src/: auto_tune.rs  building.rs  cloud_features.rs  convert.rs  dollhouse.rs  filter.rs  io.rs  lib.rs  normals.rs  plane.rs  plane_estimation.rs  plane_ops.rs  region_growing.rs  registration.rs  segmentation.rs  spatial_grid.rs  voxelize.rs
crates/spatialrust-viewer/: Cargo.toml
crates/spatialrust-viewer/src/: absolute_pose_demo.rs  essential_matrix_demo.rs  main.rs  plane_demo.rs  rigid_transform_demo.rs  segmentation_demo.rs  voxel_demo.rs  voxel_plane_demo.rs
data/: README.md
docs/: ALGORITHMS.md  book.toml
docs/src/: SUMMARY.md  algorithms.md  architecture.md  estimators.md  local_optimization.md  optimisers.md  overview.md  per_point_priors.md  pipeline.md  pointcloud_registration.md  python_bindings.md  samplers.md  scoring.md  todoplan.md
examples/: README.md  absolute_pose.rs  absolute_pose_real.rs  essential_matrix.rs  full_pipeline.rs  fundamental_matrix.rs  homography_estimation.rs  kiss_matcher_ply.rs  line_fitting.rs  linear_regression.rs  matcher_ply.rs  nonrigid_registration.rs  pcr_api.rs  pipeline_scratch_linear_regression.rs  plane_segmentation.rs  plot_line_fitting.rs  point_cloud_registration.rs  rbf_scale_field.rs  rigid_registration.rs  rigid_transform.rs  rigid_transform_real.rs  sipfh_demo.rs  sipfh_scale_test.rs  test_layout_access.rs  test_transpose_copy.rs  test_zero_copy.rs  verify_zero_copy.rs
examples/python/: pipeline_scratch_linear_regression.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: public_api.rs
openspec/specs/inlier-library/: spec.md
py_examples/: README.md  roma_essential.py  roma_fundamental.py  roma_homography.py
python/: demo_homography_scene.py  demo_pcr.py  demo_pcr_visualize.py  demo_rigid_transform_scene.py  demo_scale_viz_simple.py  demo_simple_viz.py
python/inlier/: __init__.py  pcr.py
scripts/: render6.py
src/: api.rs  bundle_adjustment.rs  choices.rs  core.rs  estimators.rs  features.rs  io.rs  lib.rs  models.rs  nister_stewenius.rs  pcr.rs  pipeline.rs  pointcloud.rs  preprocessing.rs  progress.rs  robust.rs  samplers.rs  scoring.rs  settings.rs  types.rs  utils.rs
src/estimators/: absolute_pose.rs  essential.rs  fundamental.rs  homography.rs  line.rs  mod.rs  plane.rs  rbf_scale_field.rs  rigid_transform.rs  similarity_transform.rs  tls.rs
src/kiss_matcher/: config.rs  correspondence.rs  features.rs  gnc.rs  mod.rs  pipeline_full.rs
src/matcher/: config.rs  correspondence.rs  features.rs  gnc.rs  matching.rs  mod.rs  pipeline_full.rs  pipeline_nonrigid.rs  sipfh.rs
src/optimisers/: local.rs  mod.rs
src/preconditioner/: mod.rs
src/presets/: mod.rs  pointcloud_registration.rs  rigid_registration.rs  rigid_transform.rs  similarity_registration.rs
src/python/: mod.rs
src/samplers/: adaptive_reordering.rs  importance.rs  mod.rs  napsac.rs  neighborhood.rs  progressive_napsac.rs  prosac.rs  uniform.rs
tests/: estimator_safety.rs  integration_tests.rs  kiss_matcher_correspondence_test.rs  kiss_matcher_features_test.rs  kiss_matcher_full_pipeline_test.rs  kiss_matcher_ply_test.rs  matcher_correspondence_test.rs  matcher_features_test.rs  matcher_full_pipeline_test.rs  matcher_ply_test.rs  numerical_stability.rs  pointcloud_pipeline.rs  sampler_invariants.rs  synthetic_pcd.rs  teaser_comparison.rs  teaser_tims_test.rs
tests/data/: README.md  hpatches_facade_pairs.csv  sample_dst.ply  sample_src.ply
tests/python/: test_absolute_pose.py  test_bindings.py  test_cpp_examples.py  test_point_cloud_registration.py  test_rigid_pose.py
