[package]
name = "inlier"
version = "0.1.0"
edition = "2024"
description = "Robust model fitting primitives for RANSAC-based pipelines in Rust."
license = "MIT"
authors = ["Tin Lai <tin@tinyiu.com>"]
repository = "https://github.com/soraxas/inlier"
homepage = "https://github.com/soraxas/inlier"
readme = "README.md"
keywords = ["ransac", "computer-vision", "geometry", "estimation", "robust"]
categories = ["algorithms", "computer-vision", "mathematics", "science"]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["rayon"]
rayon = ["argmin/rayon", "petgraph/rayon"]
kornia-pnp = ["dep:kornia-pnp"]
graph-cut = ["dep:petgraph"]
p3p = ["dep:p3p"]
python = ["pyo3", "pyo3/extension-module", "pyo3/abi3-py39"]

examples = ["plotters"]

[dependencies]
argmin = "0.11.0"
nalgebra = { version = "0.33", features = ["std"] }
ordered-float = "5.1.0"
rand = "0.9.2"
usearch = "2.21.4"
float-ord = "0.3.2"
kornia-pnp = { version = "0.1.10", optional = true }
petgraph = { version = "0.8.3", optional = true }
p3p = { version = "0.1.0", optional = true }
pyo3 = { version = "0.22", optional = true }
plotters = { version = "0.3", optional = true }

[[example]]
name = "plot_line_fitting"
required-features = ["examples"]
