[package]
name = "inlier"
version = "0.1.0"
edition = "2024"
description = "Robust model fitting primitives for RANSAC-based pipelines in Rust."
license = "MIT"
authors = ["Tin Lai <tin@tinyiu.com>"]
repository = "https://github.com/soraxas/inlier"
homepage = "https://github.com/soraxas/inlier"
readme = "README.md"
keywords = ["ransac", "computer-vision", "geometry", "estimation", "robust"]
categories = ["algorithms", "computer-vision", "mathematics", "science"]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = [
    # default to most common features
    "rayon",
    "kornia-pnp",
    "graph-cut",
    "p3p",
    "progress",
]
rayon = ["dep:rayon", "argmin/rayon", "petgraph?/rayon", "indicatif?/rayon"]
kornia-pnp = ["dep:kornia-pnp"]
graph-cut = ["dep:petgraph"]
p3p = ["dep:p3p"]
python = ["pyo3", "pyo3/extension-module", "pyo3/abi3-py39", "dep:numpy"]
hotpath-prof = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
progress = ["dep:indicatif"]

examples = ["plotters"]
io = ["dep:ply-rs"]

[dependencies]
argmin = "0.11.0"
nalgebra = { version = "0.33", features = ["std"] }
ordered-float = "5.1.0"
rand = "0.9.2"
usearch = "2.21.4"
float-ord = "0.3.2"
kiddo = "4.2.0"  # KD-tree for neighbor search
kornia-pnp = { version = "0.1.10", optional = true }
petgraph = { version = "0.8.3", optional = true }
p3p = { version = "0.1.0", optional = true }
pyo3 = { version = "0.22", optional = true }
hotpath = { version = "0.9", default-features = false }
numpy = { version = "0.22", optional = true }
rayon = { version = "1.10", optional = true }

# for examples
plotters = { version = "0.3", optional = true }
pcd-rs = { version = "0.12.0", optional = true }
derive_builder = "0.20.2"
anyhow = "1.0.101"
ply-rs = { version = "0.1.3", optional = true }
indicatif = { version = "0.18.3", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "plot_line_fitting"
required-features = ["examples"]

[[example]]
name = "linear_regression"
required-features = ["examples"]

[[example]]
name = "matcher_ply"
required-features = ["io"]

[[example]]
name = "nonrigid_registration"
required-features = ["io"]


[[example]]
name = "point_cloud_registration"

[[bench]]
name = "teaser_comparison"
harness = false
