[workspace]
members = [
    ".",
    "crates/spatialrust-inlier",
    "crates/inlier-gallery",
]
exclude = ["vendor"]
resolver = "2"

# Required so SpatialRust crates (vendored via submodule) can resolve
# their `field.workspace = true` declarations against this workspace root.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["SpatialRust Contributors"]
repository = "https://github.com/rsasaki0109/SpatialRust"
rust-version = "1.75"
description = "Next-generation spatial computing framework for Rust"

[workspace.dependencies]
# SpatialRust vendored crates
spatialrust-core         = { path = "vendor/spatialrust/crates/spatialrust-core" }
spatialrust-math         = { path = "vendor/spatialrust/crates/spatialrust-math" }
spatialrust-io           = { path = "vendor/spatialrust/crates/spatialrust-io" }
spatialrust-gpu          = { path = "vendor/spatialrust/crates/spatialrust-gpu" }
spatialrust-search       = { path = "vendor/spatialrust/crates/spatialrust-search" }
spatialrust-filtering    = { path = "vendor/spatialrust/crates/spatialrust-filtering" }
spatialrust-features     = { path = "vendor/spatialrust/crates/spatialrust-features" }
spatialrust-segmentation = { path = "vendor/spatialrust/crates/spatialrust-segmentation" }
spatialrust-registration = { path = "vendor/spatialrust/crates/spatialrust-registration" }
spatialrust-pipeline     = { path = "vendor/spatialrust/crates/spatialrust-pipeline" }
spatialrust-metrics      = { path = "vendor/spatialrust/crates/spatialrust-metrics", default-features = false }
spatialrust-transform    = { path = "vendor/spatialrust/crates/spatialrust-transform", default-features = false }
spatialrust-voxelize     = { path = "vendor/spatialrust/crates/spatialrust-voxelize", default-features = false }
# External deps declared by SpatialRust crates
bytemuck     = { version = "1", features = ["derive"] }
las          = "0.9"
e57          = "0.11"
copc-streaming = "0.1.5"
copc-core    = "0.2.0"
copc-writer  = "0.2.0"
pollster     = "0.4"
ureq         = "2.12"
serde        = { version = "1", features = ["derive"] }
thiserror    = "2"
wgpu         = "24"
criterion    = { version = "0.5", features = ["html_reports"] }

[package]
name = "inlier"
version = "0.1.0"
edition = "2024"
description = "Robust model fitting primitives for RANSAC-based pipelines in Rust."
license = "MIT"
authors = ["Tin Lai <tin@tinyiu.com>"]
repository = "https://github.com/soraxas/inlier"
homepage = "https://github.com/soraxas/inlier"
readme = "README.md"
keywords = ["ransac", "computer-vision", "geometry", "estimation", "robust"]
categories = ["algorithms", "computer-vision", "mathematics", "science"]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = [
    # default to most common features
    "rayon",
    "kornia-pnp",
    "graph-cut",
    "p3p",
    "progress",
]
rayon = ["dep:rayon", "argmin/rayon", "petgraph?/rayon", "indicatif?/rayon"]
kornia-pnp = ["dep:kornia-pnp"]
graph-cut = ["dep:petgraph"]
p3p = ["dep:p3p"]
python = ["pyo3", "pyo3/extension-module", "pyo3/abi3-py39", "dep:numpy"]
hotpath-prof = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
progress = ["dep:indicatif"]
serde = ["dep:serde"]
verbose = []

examples = ["plotters"]
io = ["dep:ply-rs"]

[dependencies]
argmin = "0.11.0"
nalgebra = { version = "0.33", features = ["std"] }
ordered-float = "5.1.0"
rand = "0.9.2"
float-ord = "0.3.2"
kiddo = "4.2.0"  # KD-tree for neighbor search
kornia-pnp = { version = "0.1.10", optional = true }
petgraph = { version = "0.8.3", optional = true }
p3p = { version = "0.1.0", optional = true }
pyo3 = { version = "0.22", optional = true }
hotpath = { version = "0.9", default-features = false }
numpy = { version = "0.22", optional = true }
rayon = { version = "1.10", optional = true }

# for examples
plotters = { version = "0.3", optional = true }
pcd-rs = { version = "0.12.0", optional = true }
derive_builder = "0.20.2"
anyhow = "1.0.101"
ply-rs = { version = "0.1.3", optional = true }
indicatif = { version = "0.18.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
spatialrust-inlier = { path = "crates/spatialrust-inlier" }

[[example]]
name = "plot_line_fitting"
required-features = ["examples"]

[[example]]
name = "linear_regression"
required-features = ["examples"]

[[example]]
name = "matcher_ply"
required-features = ["io"]

[[example]]
name = "nonrigid_registration"
required-features = ["io"]

[[example]]
name = "pcr_api"
required-features = ["io"]


[[example]]
name = "point_cloud_registration"

[[example]]
name = "plane_segmentation"
required-features = ["spatialrust-inlier/filtering", "spatialrust-inlier/io"]

[[example]]
name = "full_pipeline"
required-features = ["spatialrust-inlier/full"]

[[bench]]
name = "teaser_comparison"
harness = false
