[project]
name = "inlier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tin Lai", email = "tin@tinyiu.com" }]
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
dependencies = ["typing-extensions>=4"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "inlier._inlier_rs"
features = ["python"]
