[project]
name = "inlier"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tin Lai", email = "tin@tinyiu.com" }]
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
dependencies = ["typing-extensions>=4"]

[project.optional-dependencies]
dev = ["pytest>=8", "numpy>=1.26"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "inlier._inlier_rs"
features = ["python"]

[tool.uv]
dev-dependencies = ["pytest>=8", "numpy>=1.26"]
