[project]
name = "inlier"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tin Lai", email = "tin@tinyiu.com" }]
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
dependencies = [
    "inlier-data",
    "typing-extensions>=4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "numpy>=1.26", "matplotlib>=3.9"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "inlier._inlier_rs"
features = ["python"]

[dependency-groups]
dev = [
    "pytest>=8",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "tqdm>=4.67.3",
    "maturin>=1.11.5",
    "open3d>=0.19.0",
]

[tool.uv.sources]
inlier-data = { path = "../inlier-data", editable = true }
