[package]
name = "inlier-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
inlier = { path = ".." }

[[bin]]
name = "public_api"
path = "fuzz_targets/public_api.rs"
test = false
doc = false
bench = false
