[package]
name = "inlier-gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.19.0"
bevy_egui = "0.40.0"
spatialrust-inlier = { path = "../spatialrust-inlier", features = ["io", "filtering", "segmentation"] }
inlier = { path = "../..", default-features = false, features = ["io"] }
nalgebra = { version = "0.33", features = ["std"] }
spade = "2"
# Cross-platform async HTTP (native + wasm) used to fetch bundled point-cloud
# assets in the browser, where there is no filesystem for read_point_cloud_file.
ehttp = "0.5"
