[package]
name = "inlier-gallery"
version = "0.1.0"
edition = "2021"

[features]
# Opt-in multicore build. Parallelizes Step-1 normal estimation via rayon and,
# on wasm, pulls wasm-bindgen-rayon for the Web Worker thread pool. Requires the
# atomics/build-std/nightly toolchain — see `just wasm-dev-threads`. The default
# (stable) build never enables this, so it never pulls wasm-bindgen-rayon (which
# needs +atomics to compile).
threads = ["dep:rayon", "inlier/rayon", "spatialrust-inlier/rayon", "dep:wasm-bindgen-rayon"]

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = ["2d", "3d", "ui"] }
bevy_egui = "0.40.0"
spatialrust-inlier = { path = "../spatialrust-inlier", features = ["io", "filtering", "segmentation"] }
inlier = { path = "../..", default-features = false, features = ["io"] }
nalgebra = { version = "0.33", features = ["std"] }
spade = "2"
# Cross-platform async HTTP (native + wasm) used to fetch bundled point-cloud
# assets in the browser, where there is no filesystem for read_point_cloud_file.
ehttp = "0.5"
# Off-render-thread segmentation: OS thread on native, rayon worker pool on the
# wasm threads build. Only pulled in with the `threads` feature.
rayon = { version = "1.10", optional = true }

# wasm threads build only: exposes wasm-bindgen-rayon's initThreadPool to JS.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-rayon = { version = "1.2", optional = true }
